--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@ shinywidgets
 pandas
 jinja2
 markdown2
-re
-io
-datetime
 ipydatagrid
+pytz
 nasem_dairy @ git+https://github.com/CNM-University-of-Guelph/NASEM-Model-Python
