large update to convert to new nasem_dairy. - Introduced modules - Updated shiny means various UI changes - introducing custom css and js - New features (untested) including session file download

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,8 @@ NASEM_feed_library teaching.csv
 NASEM_feed_library teaching.xls
 NASEM_feed_library teaching.xlsx
 pattys_library.csv
+dev/dev nasem execute.py
+dev/NRC_2021_Program_Use_Tutorial.pdf.pdf
+dev/import pickle.py
+dev/NASEM_simulation-2024-05-30 (1).NDsession
+dev/NASEM_simulation-2024-05-30.NDsession
