docs(presentation update)

--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,6 @@ docs/_site/site_libs/quarto-contrib/shinylive-0.4.1/shinylive/pyright/pyright-ma
 docs/_site/site_libs/quarto-contrib/shinylive-0.4.1/shinylive/pyright/README.md
 docs/_site/site_libs/quarto-contrib/shinylive-0.4.1/shinylive/pyright/typeshed.en.json
 docs/_site/site_libs/quarto-contrib/shinylive-quarto-css/shinylive-quarto.css
+docs/_site/robots.txt
+docs/_site/media/qrcode_cnm-university-of-guelph-presentation.png
+docs/_site/media/qrcode_cnm-university-of-guelph.github.io.png
