--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ docs/_site/site_libs/quarto-contrib/shinylive-quarto-css/shinylive-quarto.css
 docs/_site/robots.txt
 docs/_site/media/qrcode_cnm-university-of-guelph-presentation.png
 docs/_site/media/qrcode_cnm-university-of-guelph.github.io.png
+docs/_site/Developer_notes.qmd
