--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-faicons==0.2.2
-htmltools==0.5.1
-importlib_resources==6.1.1
-pandas==2.0.3
-pytz==2023.3.post1
+setuptools>=58.0.0
+faicons>=0.2.2
+htmltools>=0.5.1
+importlib_resources>=6.1.1
+pandas>=2.0.3
+pytz>=2023.3
 shiny==0.10.1
 shinyswatch==0.6.1
-nasem_dairy @ git+https://github.com/CNM-University-of-Guelph/NASEM-Model-Python
+nasem_dairy>=0.1.0 
+
