--- a/.gitignore
+++ b/.gitignore
@@ -377,4 +377,10 @@ docs/_site/robots.txt
 docs/_site/media/qrcode_cnm-university-of-guelph-presentation.png
 docs/_site/media/qrcode_cnm-university-of-guelph.github.io.png
 docs/_site/Developer_notes.qmd
+dev/2024_dairy_nutrition/Assignment 1 Start.NDsession
+dev/2024_dairy_nutrition/Lewis Part 1 Completed.NDsession
+dev/2024_dairy_nutrition/NASEM Feed Library Custom Silage.csv
+dev/2024_dairy_nutrition/testing_NASEM_library.csv
+dev/test_simulations/Johns_task_Diet1.NDsession
+dev/test_simulations/Johns_task_Diet2.NDsession
 rsconnect-python/NASEM-shiny.json
