--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@ docs/_site/robots.txt
 docs/_site/media/qrcode_cnm-university-of-guelph-presentation.png
 docs/_site/media/qrcode_cnm-university-of-guelph.github.io.png
 docs/_site/Developer_notes.qmd
+rsconnect-python/NASEM-shiny.json
